# rss2cubox

./: .gitignore  README.md  feeds.txt  pyproject.toml  rsshub_instances.txt  run_events.jsonl  state.json
.claude/skills/video-parser/: SKILL.md
.github/workflows/: ci.yml  rss_to_cubox.yml  rss_to_cubox_test.yml
docs/: database.md
scripts/: backfill_bili_covers.py  get_bilibili_names.py  migrate_state_to_neon.py  test_agents.py
src/rss2cubox/: ai_pipeline.py  db.py  enrich_agent.py  export_web.py  feed_sources.py  global_agent.py  metrics.py  runner.py  sync_pipeline.py
src/rss2cubox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_enrich_agent.py  test_export_web.py  test_global_agent.py  test_runner.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: DashboardClient.tsx  FeedCard.tsx  Modals.tsx  charts-section.tsx  globals.css  layout.tsx  page.tsx  types.ts  utils.tsx
web/app/api/bili-cover/: route.ts
web/app/api/cubox/export/: route.ts
web/app/api/cubox/key/: route.ts
web/app/api/revalidate/: route.ts
web/app/api/signals/: route.ts
web/lib/: cuboxCookie.ts  neonDb.ts
web/public/data/: global_insights.json  metrics.json  updates.json  updates_history.jsonl
