[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss2cubox"
version = "0.1.0"
description = "Scheduled RSS ingestion pipeline for Cubox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.12.1",
  "claude-agent-sdk>=0.1.45",
  "feedparser>=6.0.11",
  "psycopg[binary]>=3.1",
  "pydantic>=2.11.0",
  "requests>=2.31.0",
  "yt-dlp",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
rss2cubox = "rss2cubox.runner:main"
rss2cubox-export-web = "rss2cubox.export_web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# scripts/test_agents.py 是集成测试，需要 ANTHROPIC_API_KEY，不在 CI 中运行
